SONAR-23298 Compute new measures for project and live update